--- a/style.css
+++ b/style.css
@@ -1,12 +1,72 @@
+:root {
+  --color-primary: hsl(160deg, 100%, 30%);
+  --color-secondary-lighter: hsl(45deg, 100%, 50%);
+  --color-secondary-darker: hsl(45deg, 100%, 40%);
+  --color-black: hsl(0deg, 0%, 0%);
+  --color-very-dark: hsl(0deg, 0%, 10%);
+  --color-dark: hsl(0deg, 0%, 30%);
+  --color-medium: hsl(0deg, 0%, 40%);
+  --color-light: hsl(0deg, 0%, 60%);
+  --color-white: hsl(0deg, 0%, 100%);
+  --spacing: 8px;
+}
+
 * {
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 html,
 body {
   margin: 0;
   padding: 0;
+  color: var(--color-very-dark);
 }
 
-/* Add styles here! */
+main {
+  background-color: var(--color-light);
+  border-top: 8px solid var(--color-medium);
+  height: 100%;
+  padding-top: 64px;
+}
+
+p > strong {
+  color: var(--color-primary);
+}
+
+/* header */
+
+.intro-chunk {
+  max-width: calc(var(--spacing) * 42);
+  padding: 16px;
+}
+
+.title {
+  margin-bottom: 48px;
+}
+
+/* main card */
+
+.card {
+  padding: 16px;
+  padding-top: 8px;
+  background-color: var(--color-white);
+  border-bottom: 8px solid var(--color-medium);
+}
+
+.indented-heading {
+  padding: 16px 32px;
+  margin-left: -32px;
+  margin-top: 0;
+  width: -moz-fit-content;
+  width: fit-content;
+  background-color: var(--color-secondary-lighter);
+  border-bottom: 8px solid var(--color-secondary-darker);
+}
+
+/* wrapper */
+
+.max-width-wrapper {
+  max-width: calc(var(--spacing) * 72);
+  margin: auto;
+}
